--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-share": "^11.0.4",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.3",
     "vprofile": "file:"
   },
   "devDependencies": {
