--- a/vprofile/src/main/resources/application.properties
+++ b/vprofile/src/main/resources/application.properties
@@ -17,3 +17,12 @@ server.port=8080
 linkedin.client.id=869zn5otx0ejyt
 linkedin.client.secret=WPL_AP1.zsgMZ54QlACwdFow.l4c3KA==
 linkedin.redirect.uri=https://www.linkedin.com/developers/tools/oauth/redirect
+#transload key and secrete
+transloadit.api.key=kglXhXcoHMQeegUlUlnvybw9KSr8iM3m
+transloadit.api.secret=MbmKrjDomgB4N5ZJyrTnmI1mLubwrntFFgocSSG5
+# AssemblyAI API Key
+assemblyai.api.key=71f83be39e8143929b12e6c6acc74484
+# Set max file size to 50MB
+spring.servlet.multipart.max-file-size=50MB
+# Set max request size to 50MB (should match or exceed max-file-size)
+spring.servlet.multipart.max-request-size=50MB
