--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "react-native": "0.75.4",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-share": "^11.0.4",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.7.0",
+    "react-native-vision-camera": "^4.5.3",
     "react-native-webview": "^13.12.3",
+    "react-native-worklets-core": "^1.3.3",
     "vprofile": "file:"
   },
   "devDependencies": {
@@ -31,6 +36,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.75.4",
     "@react-native/eslint-config": "0.75.4",
+    "@react-native/gradle-plugin": "^0.76.1",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
