--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.1",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "react": "18.3.1",
     "react-native": "0.75.4",
-    "react-native-fontawesome": "^7.0.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.21.1",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-permissions": "^5.1.0",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
+    "react-native-screens": "^4.1.0",
     "react-native-share": "^11.0.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.7.0",
-    "react-native-vision-camera": "^4.5.3",
+    "react-native-vision-camera": "^4.6.1",
     "react-native-webview": "^13.12.3",
     "react-native-worklets-core": "^1.3.3",
     "vprofile": "file:"
