--- a/vprofile/src/main/resources/application.properties
+++ b/vprofile/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test_connection
 spring.datasource.username=root
 spring.datasource.password=Aymen@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.jpa.hibernate.ddl-auto=update
