--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "set NODE_OPTIONS=--max-old-space-size=4096 && react-native start",
     "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.1",
-    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
@@ -33,6 +33,7 @@
     "react-native-share": "^11.0.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.7.0",
+    "react-native-video-controls": "^2.8.1",
     "react-native-vision-camera": "^4.6.1",
     "react-native-webview": "^13.12.3",
     "react-native-worklets-core": "^1.3.3",
