--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.6",
+    "@notifee/react-native": "^9.1.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/drawer": "^6.7.2",
@@ -29,7 +30,6 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-permissions": "^5.1.0",
-    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^4.1.0",
@@ -40,6 +40,7 @@
     "react-native-vision-camera": "^4.6.3",
     "react-native-webview": "^13.12.3",
     "redux": "^5.0.1",
+    "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
     "vprofile": "file:"
